hphp/hack/test/typecheck/array/safe_vector_array/disallows_array_of_int_when_array_of_tk_to_tv_is_required.php.exp
File "disallows_array_of_int_when_array_of_tk_to_tv_is_required.php", line 6, characters 24-34:
Invalid argument (Typing[4110])
File "disallows_array_of_int_when_array_of_tk_to_tv_is_required.php", line 3, characters 39-51:
Expected darray<[unresolved], [unresolved]>
File "disallows_array_of_int_when_array_of_tk_to_tv_is_required.php", line 5, characters 15-24:
But got varray<int>
